# rain

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  TODO.md  actions.py  authenticate.py  client.py  data.py  generate.py  generate_api_docs.py  keygen.py  load.py  message.py  mkdocs.yml  new_user.py  pyproject.toml  server.py  setup.cfg  setup.py  transport.py
data/: aurora.data  odyssey.data  test.data
docs/: api.md  index.md  installation.md  logging.md  messages.md  plugins.md  registration.md  run_client.md  run_server.md  setup_client.md  setup_server.md  tips_and_tricks.md
examples/: README.md  get.py  hosts.cfg  loading_plugins.py  rain.cfg  server.py  subscribe.py
examples/config/: hosts.cfg  server.cfg
examples/plugins/: get_hyp.py  plugin_example.py  say_hello.py
examples/private_keys/: apollo.key_secret  test-testson.key_secret
examples/reindeer/: hosts.cfg  server.cfg
infra_info/: apollo.info  aurora.info  client.info  daedalus.info  odyssey.info  server.info  test.info
infra_secret/: test.private
paper-joss/: paper.md
private_keys/: apollo.key_secret  client.key_secret  daedalus.key_secret  key_test.key_secret  odyssey.key_secret  server.key_secret
public_keys/: apollo.key  client.key  daedalus.key  key_test.key  odyssey.key  server.key
src/rain/: __init__.py  actions.py  authenticate.py  cli.py  client.py  (+20 more)
src/rain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: initial_tryouts.py  test_package.py  test_package_integrity.py  test_pub_sub_server_client.py  test_rep_req_server_client.py  test_rep_server_client.py  test_schema.py
(+5 files in other folders)
